  SQS- and SNS-triggered Lambda functions already produce _span links_ for
  incoming messages with trace-context. This allows linking between
  producer and consumer in the Kibana APM app. ({pull}3044[#3044])

* Extend Lambda instrumentation to capture details for Lambda function URL
  and ELB-triggered Lambdas. ({issues}2901[#2901])

[float]
===== Bug fixes

* Fix `metadata.service.agent.activation_method=k8s-attach` handling to
  (a) use an explicit marker from the k8s apm attacher
  (`ELASTIC_APM_ACTIVATION_METHOD`) and (b) use the specified "k8s-attach"
  value, rather than the incorrect "k8s-attacher".
  ({issue}3119[#3119])

* Add missing <<opentelemetry-bridge-enabled>> ({pull}3121[#3121]) and
  <<context-manager>> Agent configuration options to the TypeScript types.

[float]
===== Chores


[[release-notes-3.42.0]]
==== 3.42.0 2023/01/18

[float]
===== Features

* Support for tracing/monitoring https://learn.microsoft.com/en-us/azure/azure-functions/[Azure Functions].
  See the <<azure-functions>> document.
  ({pull}3071[#3071], https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-azure-functions.md[spec])

* Support `restify@11`.

[float]
===== Bug fixes

* Fix instrumentation of `http.request()` and `http.get()` (and the same
  for `https.`) so that Basic auth fields are not lost. Before this change
  if the first arg was a URL or string with `username` and/or `password`
  values, e.g. `https://user:pass@...`, then the auth fields were not
  included in the actual HTTP request.  ({issues}2044[#2044])

* Fix `span.context.destination.service.resource` for S3 spans to have an
  "s3/" prefix.
+
*Note*: While this is considered a bugfix, but it can potentially be a breaking
change in the Kibana APM app: It can break the history of the S3-Spans / metrics
for users relying on `context.destination.service.resource`. If users happen to
run agents both with and without this fix (for same or different languages), the